# robot-ros2

./: .gitignore  Makefile  README.md
src/nebulea_packages/: ros2_rust_humble.repos
src/nebulea_packages/example/minimal_pub_sub/: Cargo.toml  package.xml
src/nebulea_packages/example/minimal_pub_sub/src/: minimal_publisher.rs
src/nebulea_packages/simulation/camera_to_robot/camera_to_robot_py/: package.xml  setup.py
src/nebulea_packages/simulation/camera_to_robot/camera_to_robot_py/camera_to_robot_py/: camera_publisher.py  coordinate_transform.py  robotic_arm_publishing_subscriber.py
src/nebulea_packages/simulation/camera_to_robot/camera_to_robot_rust/: Cargo.toml  README.md  package.xml
src/nebulea_packages/simulation/camera_to_robot/camera_to_robot_rust/src/: camera_publisher.rs  coordinate_transform.rs  robotic_arm_publishing_subscriber.rs
src/nebulea_packages/simulation/charging_dock/charging_dock_interfaces/: CMakeLists.txt  package.xml
src/nebulea_packages/simulation/charging_dock/charging_dock_interfaces/action/: ConnectToChargingDock.action
src/nebulea_packages/simulation/charging_dock/charging_dock_py/: package.xml  setup.cfg  setup.py
src/nebulea_packages/simulation/charging_dock/charging_dock_py/charging_dock_py/: connect_to_charging_dock_action_client.py  connect_to_charging_dock_action_server.py
src/nebulea_packages/two_wheeled_robot/: CMakeLists.txt  README.md  package.xml
src/nebulea_packages/two_wheeled_robot/include/: README.md
src/nebulea_packages/two_wheeled_robot/launch/hospital_world/: hospital_world_connect_to_charging_dock.launch.py
src/nebulea_packages/two_wheeled_robot/models/two_wheeled_robot_description/: model.config
src/nebulea_packages/two_wheeled_robot/params/hospital_world/: nav2_connect_to_charging_dock_params.yaml
src/nebulea_packages/two_wheeled_robot/scripts/: navigate_to_charging_dock.py
src/nebulea_packages/two_wheeled_robot/scripts/battery_state/: battery_state_pub.py
src/nebulea_packages/two_wheeled_robot/scripts/transforms/: README.md  map_to_base_link_transform.py
src/nebulea_packages/two_wheeled_robot/two_wheeled_robot_py/scripts/: CMakeList.txt  CMakeLists.txt  navigate_to_charging_dock.py
src/nebulea_packages/two_wheeled_robot/worlds/: hospital.world
