[package]
name = "minimal_pub_sub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minimal_subscriber"
path = "src/minimal_subscriber.rs"

[[bin]]
name = "minimal_publisher"
path = "src/minimal_publisher.rs"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}

[dependencies.rclrs]
version = "0.3"

[dependencies.rosidl_runtime_rs]
version = "0.3"

[dependencies.std_msgs]
version = "*"