<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_to_robot</name>
  <version>0.0.0</version>
  <description>Converts camera coordinates to robotic arm base frame coordinates</description>
  <maintainer email="loidinh.git@gmail.com">Loi Dinh</maintainer>
  <license>All Rights Reserved.</license>

  <build_depend>rclrs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclrs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
